tests/ui/const-generics/opaque_types.stderr
error[E0391]: cycle detected when computing type of `Foo::{opaque#0}`
  --> $DIR/opaque_types.rs:3:12
   |
LL | type Foo = impl Sized;
   |            ^^^^^^^^^^
   |
note: ...which requires computing type of opaque `Foo::{opaque#0}`...
  --> $DIR/opaque_types.rs:3:12
   |
LL | type Foo = impl Sized;
   |            ^^^^^^^^^^
note: ...which requires type-checking `main`...
  --> $DIR/opaque_types.rs:9:1
   |
LL | fn main() {
   | ^^^^^^^^^
note: ...which requires evaluating type-level constant...
  --> $DIR/opaque_types.rs:10:11
   |
LL |     foo::<42>();
   |           ^^
note: ...which requires const-evaluating + checking `main::{constant#0}`...
  --> $DIR/opaque_types.rs:10:11
   |
LL |     foo::<42>();
   |           ^^
note: ...which requires caching mir of `main::{constant#0}` for CTFE...
  --> $DIR/opaque_types.rs:10:11
   |
LL |     foo::<42>();
   |           ^^
note: ...which requires elaborating drops for `main::{constant#0}`...
  --> $DIR/opaque_types.rs:10:11
   |
LL |     foo::<42>();
   |           ^^
   = note: ...which requires normalizing `Foo`...
   = note: ...which again requires computing type of `Foo::{opaque#0}`, completing the cycle
note: cycle used when checking that `Foo::{opaque#0}` is well-formed
  --> $DIR/opaque_types.rs:3:12
   |
LL | type Foo = impl Sized;
   |            ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: `Foo` is forbidden as the type of a const generic parameter
  --> $DIR/opaque_types.rs:6:17
   |
LL | fn foo<const C: Foo>() {}
   |                 ^^^
   |
   = note: the only supported types are integers, `bool` and `char`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0391`.
